# ReadT265

./: CMakeLists.txt  README.md  parameters.txt
.kdev4/: camera_get.kdev4
src/: main.cpp
